--- a/new_file.html
+++ b/new_file.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new file</title>
+    <style>
+        .parent{
+            background-color: bisque;
+            display: grid;
+            gap: 10px;
+            grid-template-columns: repeat(3,100px);
+            grid-template-rows: repeat(4,100px);
+            grid-template-areas:
+            "child1 child1 child2"
+            "child3 child4 child2"
+            "child3 child4 child2"
+            "child3 child5 child" ;
+        }
+        .child{
+            background-color: brown;
+            place-content: center;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
- <h1>saikrishna</h1>   
+ <h1>media queriy</h1>  
+<div class="parent">
+    <div class="child child_1">child 1</div>
+    <div class="child child_2">child 2</div>
+    <div class="child child_3">child 3</div>
+    <div class="child child_4">child 4</div>
+    <div class="child child_5">child 5</div>
+    <div class="child child_6">child 6</div>
+    <div class="child child_7">child 7</div>
+    <div class="child child_8">child 8</div>
+    <div class="child child_9">child 9</div>
+    <div class="child child_10">child 10</div>
+    <div class="child child_11">child 11</div>
+    <div class="child child_12">child 12</div>
+</div>
 </body>
 </html>
